services page dynamic end

--- a/src/utils/i18n/locals/en/en.json
+++ b/src/utils/i18n/locals/en/en.json
@@ -31,62 +31,63 @@
         "about_card6_text": "Web platforms"
     },
     "customers": {
-        "subtitle": "Mijozlar fikrlari",
-        "title": "Mijozlarimizning fikrlari",
-        "text": "Siz ham Manasoft tajribasidan foydalaning va biznesingizni keyingi bosqichga olib chiqing!",
+        "subtitle": "Customer reviews",
+        "title": "Our customers' reviews",
+        "text": "Use the experience of Manasoft and take your business to the next level!",
         "customer1_name": "Max Thompson (Creative Designer)",
         "customer1_text": "Manasoft team has been amazing to work with! They developed a custom Telegram bot for us, which accelerated the process of providing services to our clients. Now we can serve our clients faster and more efficiently."
     },
     "services": {
-        "services_home_title1": "Texnologiya va Tajribani Birlashtiring",
-        "services_home_text1": "Bizning xizmatlar",
-        "services_home_title2": "Biznesingiz uchun mukammal IT yechimlar",
-        "services_home_text2": "Manasoft – IT dunyosida ishonchli hamkoringiz! Biz veb-sayt va mobil ilovalar va boshqa ilg‘or texnologik yechimlarni taklif qilamiz.",
-        "services_home_card1_title": "CRM/ERP Tizimlari",
-        "services_home_card1_text": "CRM va ERP tizimlari orqali jarayonlaringizni optimallashtiring, samaradorlikni oshiring va biznesingizni raqamlashtiring.",
-        "services_home_card2_title": "Mobil ilovalar",
-        "services_home_card2_text": "iOS va Android uchun zamonaviy va tezkor mobil ilovalar yaratamiz. Mahsulotingizni yangi bosqichga olib chiqing!",
-        "services_home_card3_title": "Telegram botlar",
-        "services_home_card3_text": "Telegram botlar orqali mijozlaringiz bilan  xizmatlarni avtomatlashtiring va biznesingizni rivojlantiring!",
-        "services_home_card4_title": "Veb saytlar",
-        "services_home_card4_text": "Biznesingizga mos, tezkor va zamonaviy veb-saytlar yaratamiz. Raqobatchilardan ajralib turish uchun biz bilan bog‘laning!",
-        "services_page_title": "Innovatsion IT yechimlar – Biznesingiz uchun eng yaxshi xizmatlar",
-        "services_page_text": "Manasoft IT kompaniyasi sifatli va innovatsion IT xizmatlarini taqdim etadi. CRM/ERP tizimlari, Telegram botlar, mobil ilovalar va veb-sayt yaratishgacha bo‘lgan keng ko‘lamli yechimlar bilan sizning biznesingizni rivojlantirishga yordam beramiz.",
-        "services": "Xizmatlar",
-        "services_page_card1_subtitle": "Mobil ilova",
-        "services_page_card1_title": "IOS va Android uchun zamonaviy mobil ilovalar",
-        "services_page_card1_text": "Mobil ilovalar biznesingizga mijozlar bilan yanada qulay aloqada bo‘lish imkonini beradi. Biz sizga tezkor, samarali va zamonaviy mobil ilovalar yaratib beramiz.",
-        "services_page_card1_xizmatlar": "iOS va Android ilovalar ishlab chiqish, Ilovalarni dizayn qilish va optimallashtirish, API va server bilan integratsiya, Ilovani App Store va Google Play'ga joylash",
-        "services_page_card2_subtitle": "Veb sayt yaratish",
-        "services_page_card2_title": "Jozibali, tezkor veb saytlar",
-        "services_page_card2_text": "Biznesingizni onlayn maydonda taqdim qilish uchun zamonaviy veb-saytlarga ehtiyoj sezayotgan bo‘lsangiz, Manasoft siz uchun eng yaxshi yechimni taqdim etadi.",
-        "services_page_card2_xizmatlar": "Korporativ va shaxsiy veb-saytlar, Internet-do‘kon va e-commerce saytlar, SEO optimizatsiya va tezkor yuklanish, Kontent boshqaruv tizimlari (CMS)",
+        "services_home_title1": "Combine technology and experience",
+        "services_home_text1": "Our services",
+        "services_home_title2": "Ideal IT solutions for your business",
+        "services_home_text2": "Manasoft is a reliable partner in the IT world! We offer websites and mobile applications and other advanced technological solutions.",
+        "services_home_card1_title": "CRM/ERP Systems",
+        "services_home_card1_text": "Optimize your processes, increase efficiency, and digitize your business through CRM and ERP systems.",
+        "services_home_card2_title": "Mobile apps",
+        "services_home_card2_text": "We create modern and fast mobile applications for iOS and Android. Take your product to a new level!",
+        "services_home_card3_title": "Telegram bots",
+        "services_home_card3_text": "Automate services with your clients through Telegram bots and develop your business!",
+        "services_home_card4_title": "Websites",
+        "services_home_card4_text": "We create fast, modern websites that are relevant to your business. Contact us to stand out from your competitors!",
+        "services_page_title": "Innovative IT solutions - the best services for your business",
+        "services_page_text": "The IT company Manasoft provides high-quality and innovative IT services. We help you grow your business with a wide range of solutions, from CRM/ERP systems, Telegram bots, mobile applications, and website creation.",
+        "services": "Services",
+        "services_button_text": "Learn more",
+        "services_page_card1_subtitle": "Mobile app",
+        "services_page_card1_title": "Modern mobile apps for iOS and Android",
+        "services_page_card1_text": "Mobile apps allow your business to connect with customers more easily. We will create fast, efficient, and modern mobile applications for you.",
+        "services_page_card1_xizmatlar": "iOS and Android app development, App design and optimization, API and server integration, App placement in the App Store and Google Play",
+        "services_page_card2_subtitle": "Create website",
+        "services_page_card2_title": "Attractive, fast websites",
+        "services_page_card2_text": "If you need modern websites to present your business online, Manasoft will provide you with the best solution.",
+        "services_page_card2_xizmatlar": "Corporate and personal websites, online stores and e-commerce sites, SEO optimization and quick loading, Content Management Systems (CMS)",
         "services_page_card3_subtitle": "Telegram bot",
-        "services_page_card3_title": "24/7 Avtomatlashtirilgan telegram botlar",
-        "services_page_card3_text": "Telegram botlari mijozlarga xizmat ko‘rsatish, savdo, axborot yetkazish va avtomatlashtirish uchun samarali vosita hisoblanadi. Biz sizning biznesingizga moslashgan aqlli botlarni ishlab chiqamiz.",
-        "services_page_card3_xizmatlar": "Buyurtmalarni qabul qiluvchi botlar, Savollarga avtomatik javob beruvchi botlar, To‘lov tizimlari bilan integratsiya, Ma’lumotlar bazasi bilan ishlash",
-        "services_page_card4_subtitle": "CRM/ERP tizimlari",
-        "services_page_card4_title": "Biznes jarayonlaringizni avtomatlashtiring",
-        "services_page_card4_text": "CRM va ERP tizimlari biznesingizni optimallashtirish, mijozlar bilan ishlash va jarayonlarni boshqarishda eng yaxshi yechimdir. Manasoft sizga shaxsiylashtirilgan va moslashtirilgan dasturiy ta’minot ishlab chiqadi.",
-        "services_page_card4_xizmatlar": "CRM tizimlarini ishlab chiqish va sozlash, ERP tizimlarini yaratish va integratsiya qilish, Mijozlar ma’lumotlarini boshqarish, Tahliliy va hisob-kitob tizimlari"
+        "services_page_card3_title": "24/7 Automated Telegram bots",
+        "services_page_card3_text": "Telegram bots are an effective tool for customer service, sales, information delivery, and automation. We will develop smart bots tailored to your business.",
+        "services_page_card3_xizmatlar": "Order-taking bots, Automatic answering bots, Integration with payment systems, Database management",
+        "services_page_card4_subtitle": "CRM/ERP systems",
+        "services_page_card4_title": "Automate your business processes",
+        "services_page_card4_text": "CRM and ERP systems are the best solution for optimizing your business, working with clients, and managing processes. Manasoft will develop customized and personalized software for you.",
+        "services_page_card4_xizmatlar": "Development and configuration of CRM systems, creation and integration of ERP systems, Client Data Management, Analytical and Computing Systems"
     },
     "workpage": {
-        "workpage_title": "Bizning ishlash jarayonimiz",
-        "workpage_text": "Manasoft jamoasi har bir loyihani aniqlik va sifat bilan amalga oshiradi. Bizning yondashuv samaradorlik va innovatsiyani ta’minlaydi!",
-        "workpage_subtitle1": "Ishlab chiqilishidan oldin",
-        "workpage_subtitle2": "Ishlab chiqarish",
-        "card1_title": "Ma'lumotlarni yig'ish",
-        "card1_text": "Muvaffaqiyatli loyiha yaratish uchun eng avvalo ehtiyojlaringiz va biznes maqsadlaringizni chuqur o‘rganamiz. Bu bosqichda biz ma’lumot to‘playmiz va strategik yo‘nalishni aniqlaymiz.",
-        "card2_title": "Loyihaning TZ",
-        "card2_text": "Loyiha muvaffaqiyatining kaliti – aniq va puxta ishlab chiqilgan texnik topshiriq (TZ). Biz barcha talablarni hujjatlashtiramiz va loyiha yo‘nalishini belgilaymiz.",
-        "card3_title": "Integratsiya va Tadqiqot",
-        "card3_text": " Loyiha uchun eng mos texnologiyalarni tanlash, imkoniyatlarni tahlil qilish va kerakli integratsiyalarni ishlab chiqish bosqichi. Biz biznesingiz uchun eng optimal yechimni topamiz!",
-        "card4_title": "Dizayn loyihasi",
-        "card4_text": "UX/UI dizayni – foydalanuvchilar bilan o‘zaro aloqani yengillashtirish uchun asosiy omil. Biz loyihangizga mos keladigan jozibali va funksional dizayn yaratamiz.",
-        "card5_title": "Rivojlanish prototipi",
-        "card5_text": "Dastlabki prototip orqali loyiha qanday ishlashini sinovdan o‘tkazamiz. Bu bosqichda asosiy funksiyalar shakllantiriladi va dastlabki testlar o‘tkaziladi.",
-        "card6_title": "Rivojlanish yakuniy ",
-        "card6_text": " Loyiha to‘liq yakunlanadi, barcha funksiyalar sinovdan o‘tkaziladi va optimallashtiriladi. Biz mijozlarimizga tayyor mahsulotni yuqori sifat bilan taqdim etamiz!"
+        "workpage_title": "Our workflow",
+        "workpage_text": "The Manasoft team implements each project with precision and quality. Our approach ensures efficiency and innovation!",
+        "workpage_subtitle1": "Before development",
+        "workpage_subtitle2": "Production",
+        "card1_title": "Data collection",
+        "card1_text": "To create a successful project, we first thoroughly study your needs and business goals. At this stage, we gather information and determine the strategic direction.",
+        "card2_title": "TZ of the project",
+        "card2_text": "The key to the project's success is a clear and carefully developed technical specifications (TS). We will document all the requirements and determine the project direction.",
+        "card3_title": "Integration and Research",
+        "card3_text": "The stage of selecting the most suitable technologies for the project, analyzing opportunities, and developing the necessary integrations. We will find the most optimal solution for your business!",
+        "card4_title": "Design project",
+        "card4_text": "UX/UI design is a key factor in facilitating user interaction. We will create an attractive and functional design that suits your project.",
+        "card5_title": "Development prototype",
+        "card5_text": "We will test how the project works using the prototype. At this stage, the main functions are formed and preliminary tests are conducted.",
+        "card6_title": "Final development",
+        "card6_text": "The project will be fully completed, all functions will be tested and optimized. We offer our customers the finished product with high quality!"
     },
     "project1": {
         "banner_title": "Femmy",
