--- a/src/utils/i18n/locals/ru/ru.json
+++ b/src/utils/i18n/locals/ru/ru.json
@@ -31,62 +31,63 @@
         "about_card6_text": "Веб-платформы"
     },
     "customers": {
-        "subtitle": "Mijozlar fikrlari",
-        "title": "Mijozlarimizning fikrlari",
-        "text": "Siz ham Manasoft tajribasidan foydalaning va biznesingizni keyingi bosqichga olib chiqing!",
+        "subtitle": "Отзывы клиентов",
+        "title": "Отзывы наших клиентов",
+        "text": "Воспользуйтесь опытом Manasoft и выведите свой бизнес на новый уровень!",
         "customer1_name": "Max Thompson (Creative Designer)",
         "customer1_text": "Manasoft team has been amazing to work with! They developed a custom Telegram bot for us, which accelerated the process of providing services to our clients. Now we can serve our clients faster and more efficiently."
     },
     "services": {
-        "services_home_title1": "Texnologiya va Tajribani Birlashtiring",
-        "services_home_text1": "Bizning xizmatlar",
-        "services_home_title2": "Biznesingiz uchun mukammal IT yechimlar",
-        "services_home_text2": "Manasoft – IT dunyosida ishonchli hamkoringiz! Biz veb-sayt va mobil ilovalar va boshqa ilg‘or texnologik yechimlarni taklif qilamiz.",
-        "services_home_card1_title": "CRM/ERP Tizimlari",
-        "services_home_card1_text": "CRM va ERP tizimlari orqali jarayonlaringizni optimallashtiring, samaradorlikni oshiring va biznesingizni raqamlashtiring.",
-        "services_home_card2_title": "Mobil ilovalar",
-        "services_home_card2_text": "iOS va Android uchun zamonaviy va tezkor mobil ilovalar yaratamiz. Mahsulotingizni yangi bosqichga olib chiqing!",
-        "services_home_card3_title": "Telegram botlar",
-        "services_home_card3_text": "Telegram botlar orqali mijozlaringiz bilan  xizmatlarni avtomatlashtiring va biznesingizni rivojlantiring!",
-        "services_home_card4_title": "Veb saytlar",
-        "services_home_card4_text": "Biznesingizga mos, tezkor va zamonaviy veb-saytlar yaratamiz. Raqobatchilardan ajralib turish uchun biz bilan bog‘laning!",
-        "services_page_title": "Innovatsion IT yechimlar – Biznesingiz uchun eng yaxshi xizmatlar",
-        "services_page_text": "Manasoft IT kompaniyasi sifatli va innovatsion IT xizmatlarini taqdim etadi. CRM/ERP tizimlari, Telegram botlar, mobil ilovalar va veb-sayt yaratishgacha bo‘lgan keng ko‘lamli yechimlar bilan sizning biznesingizni rivojlantirishga yordam beramiz.",
-        "services": "Xizmatlar",
-        "services_page_card1_subtitle": "Mobil ilova",
-        "services_page_card1_title": "IOS va Android uchun zamonaviy mobil ilovalar",
-        "services_page_card1_text": "Mobil ilovalar biznesingizga mijozlar bilan yanada qulay aloqada bo‘lish imkonini beradi. Biz sizga tezkor, samarali va zamonaviy mobil ilovalar yaratib beramiz.",
-        "services_page_card1_xizmatlar": "iOS va Android ilovalar ishlab chiqish, Ilovalarni dizayn qilish va optimallashtirish, API va server bilan integratsiya, Ilovani App Store va Google Play'ga joylash",
-        "services_page_card2_subtitle": "Veb sayt yaratish",
-        "services_page_card2_title": "Jozibali, tezkor veb saytlar",
-        "services_page_card2_text": "Biznesingizni onlayn maydonda taqdim qilish uchun zamonaviy veb-saytlarga ehtiyoj sezayotgan bo‘lsangiz, Manasoft siz uchun eng yaxshi yechimni taqdim etadi.",
-        "services_page_card2_xizmatlar": "Korporativ va shaxsiy veb-saytlar, Internet-do‘kon va e-commerce saytlar, SEO optimizatsiya va tezkor yuklanish, Kontent boshqaruv tizimlari (CMS)",
-        "services_page_card3_subtitle": "Telegram bot",
-        "services_page_card3_title": "24/7 Avtomatlashtirilgan telegram botlar",
-        "services_page_card3_text": "Telegram botlari mijozlarga xizmat ko‘rsatish, savdo, axborot yetkazish va avtomatlashtirish uchun samarali vosita hisoblanadi. Biz sizning biznesingizga moslashgan aqlli botlarni ishlab chiqamiz.",
-        "services_page_card3_xizmatlar": "Buyurtmalarni qabul qiluvchi botlar, Savollarga avtomatik javob beruvchi botlar, To‘lov tizimlari bilan integratsiya, Ma’lumotlar bazasi bilan ishlash",
-        "services_page_card4_subtitle": "CRM/ERP tizimlari",
-        "services_page_card4_title": "Biznes jarayonlaringizni avtomatlashtiring",
-        "services_page_card4_text": "CRM va ERP tizimlari biznesingizni optimallashtirish, mijozlar bilan ishlash va jarayonlarni boshqarishda eng yaxshi yechimdir. Manasoft sizga shaxsiylashtirilgan va moslashtirilgan dasturiy ta’minot ishlab chiqadi.",
-        "services_page_card4_xizmatlar": "CRM tizimlarini ishlab chiqish va sozlash, ERP tizimlarini yaratish va integratsiya qilish, Mijozlar ma’lumotlarini boshqarish, Tahliliy va hisob-kitob tizimlari"
+        "services_home_title1": "Объедините Технологию и Опыт",
+        "services_home_text1": "Наши услуги",
+        "services_home_title2": "Отличные IT-решения для вашего бизнеса",
+        "services_home_text2": "Manasoft - ваш надежный партнер в мире IT! Мы предлагаем веб-сайты и мобильные приложения, а также другие передовые технологические решения.",
+        "services_home_card1_title": "CRM/ERP Системы",
+        "services_home_card1_text": "Оптимизируйте свои процессы, повышайте эффективность и цифровизируйте свой бизнес с помощью систем CRM и ERP.",
+        "services_home_card2_title": "Мобильные приложения",
+        "services_home_card2_text": "Мы создаем современные и быстрые мобильные приложения для iOS и Android. Выведите свой продукт на новый уровень!",
+        "services_home_card3_title": "Telegram-боты",
+        "services_home_card3_text": "Автоматизируйте сервисы со своими клиентами через Telegram-боты и развивайте свой бизнес!",
+        "services_home_card4_title": "Сайты",
+        "services_home_card4_text": "Мы создаем быстрые и современные веб-сайты, подходящие для вашего бизнеса. Свяжитесь с нами, чтобы выделиться среди конкурентов!",
+        "services_page_title": "Инновационные IT-решения - Лучшие услуги для вашего бизнеса",
+        "services_page_text": "IT-компания Manasoft предоставляет качественные и инновационные IT-услуги. Мы помогаем развивать ваш бизнес с широким спектром решений, от CRM/ERP систем, Telegram-ботов, мобильных приложений и создания веб-сайта.",
+        "services": "Услуги",
+        "services_button_text": "Узнать больше",
+        "services_page_card1_subtitle": "Мобильное приложение",
+        "services_page_card1_title": "Современные мобильные приложения для iOS и Android",
+        "services_page_card1_text": "Мобильные приложения позволяют вашему бизнесу взаимодействовать с клиентами более комфортно. Мы создадим для вас быстрые, эффективные и современные мобильные приложения.",
+        "services_page_card1_xizmatlar": "Разработка приложений для iOS и Android, Дизайн и оптимизация приложений, интеграция с API и сервером, размещение приложения в App Store и Google Play",
+        "services_page_card2_subtitle": "Создать веб-сайт",
+        "services_page_card2_title": "Привлекательные, быстрые веб-сайты",
+        "services_page_card2_text": "Если вам нужны современные веб-сайты для представления вашего бизнеса на онлайн-площадке, Manasoft предоставит вам лучшее решение.",
+        "services_page_card2_xizmatlar": "Корпоративные и персональные веб-сайты, интернет-магазины и сайты электронной коммерции, SEO-оптимизация и быстрая загрузка, системы управления контентом (CMS)",
+        "services_page_card3_subtitle": "Телеграм-бот",
+        "services_page_card3_title": "24/7 Автоматизированные Telegram-боты",
+        "services_page_card3_text": "Telegram-боты являются эффективным инструментом для обслуживания клиентов, продаж, доставки информации и автоматизации. Мы разрабатываем интеллектуальные боты, адаптированные к вашему бизнесу.",
+        "services_page_card3_xizmatlar": "Боты принимающие заказы, Боты автоматически отвечающие на вопросы, Интеграция с платежными системами, Работа с базами данных",
+        "services_page_card4_subtitle": "CRM/ERP системы",
+        "services_page_card4_title": "Автоматизируйте свои бизнес-процессы",
+        "services_page_card4_text": "CRM и ERP-системы - лучшее решение для оптимизации вашего бизнеса, работы с клиентами и управления процессами. Manasoft разработает для вас персонализированное и персонализированное программное обеспечение.",
+        "services_page_card4_xizmatlar": "Разработка и настройка CRM-систем, создание и интеграция ERP-систем, Управление данными клиентов, Аналитические и расчетные системы"
     },
     "workpage": {
-        "workpage_title": "Bizning ishlash jarayonimiz",
-        "workpage_text": "Manasoft jamoasi har bir loyihani aniqlik va sifat bilan amalga oshiradi. Bizning yondashuv samaradorlik va innovatsiyani ta’minlaydi!",
-        "workpage_subtitle1": "Ishlab chiqilishidan oldin",
-        "workpage_subtitle2": "Ishlab chiqarish",
-        "card1_title": "Ma'lumotlarni yig'ish",
-        "card1_text": "Muvaffaqiyatli loyiha yaratish uchun eng avvalo ehtiyojlaringiz va biznes maqsadlaringizni chuqur o‘rganamiz. Bu bosqichda biz ma’lumot to‘playmiz va strategik yo‘nalishni aniqlaymiz.",
-        "card2_title": "Loyihaning TZ",
-        "card2_text": "Loyiha muvaffaqiyatining kaliti – aniq va puxta ishlab chiqilgan texnik topshiriq (TZ). Biz barcha talablarni hujjatlashtiramiz va loyiha yo‘nalishini belgilaymiz.",
-        "card3_title": "Integratsiya va Tadqiqot",
-        "card3_text": " Loyiha uchun eng mos texnologiyalarni tanlash, imkoniyatlarni tahlil qilish va kerakli integratsiyalarni ishlab chiqish bosqichi. Biz biznesingiz uchun eng optimal yechimni topamiz!",
-        "card4_title": "Dizayn loyihasi",
-        "card4_text": "UX/UI dizayni – foydalanuvchilar bilan o‘zaro aloqani yengillashtirish uchun asosiy omil. Biz loyihangizga mos keladigan jozibali va funksional dizayn yaratamiz.",
-        "card5_title": "Rivojlanish prototipi",
-        "card5_text": "Dastlabki prototip orqali loyiha qanday ishlashini sinovdan o‘tkazamiz. Bu bosqichda asosiy funksiyalar shakllantiriladi va dastlabki testlar o‘tkaziladi.",
-        "card6_title": "Rivojlanish yakuniy ",
-        "card6_text": " Loyiha to‘liq yakunlanadi, barcha funksiyalar sinovdan o‘tkaziladi va optimallashtiriladi. Biz mijozlarimizga tayyor mahsulotni yuqori sifat bilan taqdim etamiz!"
+        "workpage_title": "Наш рабочий процесс",
+        "workpage_text": "Команда Manasoft реализует каждый проект с точностью и качеством. Наш подход обеспечивает эффективность и инновации!",
+        "workpage_subtitle1": "До разработки",
+        "workpage_subtitle2": "Производство",
+        "card1_title": "Сбор данных",
+        "card1_text": "Чтобы создать успешный проект, мы сначала глубоко изучим ваши потребности и бизнес-цели. На этом этапе мы собираем информацию и определяем стратегическое направление.",
+        "card2_title": "ТЗ проекта",
+        "card2_text": "Ключ к успеху проекта - точное и тщательно разработанное техническое задание (ТЗ). Мы документируем все требования и определяем направление проекта.",
+        "card3_title": "Интеграция и исследования",
+        "card3_text": "Этап выбора наиболее подходящих технологий для проекта, анализа возможностей и разработки необходимых интеграций. Мы найдем оптимальное решение для вашего бизнеса!",
+        "card4_title": "Проект дизайна",
+        "card4_text": "Дизайн UX/UI - ключевой фактор для облегчения взаимодействия с пользователями. Мы создадим привлекательный и функциональный дизайн, который подойдет вашему проекту.",
+        "card5_title": "Прототип разработки",
+        "card5_text": "Мы протестируем, как работает проект, с помощью предварительного прототипа. На этом этапе формируются основные функции и проводятся предварительные тесты.",
+        "card6_title": "Окончательное развитие",
+        "card6_text": "Проект будет полностью завершен, все функции будут протестированы и оптимизированы. Мы предлагаем нашим клиентам готовый продукт с высоким качеством!"
     },
     "project1": {
         "banner_title": "Femmy",
