--- a/src/utils/i18n/locals/en/en.json
+++ b/src/utils/i18n/locals/en/en.json
@@ -89,6 +89,37 @@
         "card6_title": "Final Development",
         "card6_text": "The project is fully completed, all functionalities are tested and optimized. We deliver a high-quality final product to our clients!"
     },
+    "project_home_page": {
+        "subtitle_home": "Our Projects",
+        "title_home": "Explore Our Projects",
+        "button_text": "All Projects",
+        "card1_title": "Manasoft",
+        "card1_text": "IT Company Website",
+        "card2_title": "Femmi",
+        "card2_text": "Android and iOS",
+        "card3_title": "MedAgent",
+        "card3_text": "Medical Representatives Workflow Management",
+        "card4_title": "Ross & Foundations",
+        "card4_text": "Construction Company Website",
+        "card5_title": "IMPERIAL GRANITE",
+        "card5_text": "Sales Process Automation"
+    },
+    "project_page": {
+        "subtitle": "+100 Completed Projects",
+        "title": "Our Projects",
+        "text": "Looking for a reliable IT partner to efficiently grow your business? Manasoft provides you with modern, fast, and reliable solutions!",
+        "button_text": "All",
+        "button_text1": "Mobile Application",
+        "button_text2": "Website",
+        "button_text3": "CRM",
+        "button_text4": "UX/UI",
+        "card1_title": "Femmi",
+        "card1_text": "Mobile Application",
+        "card2_title": "IMPERIAL GRANITE",
+        "card2_text": "Mobile Application",
+        "card3_title": "MedAgent",
+        "card3_text": "Mobile Application"
+    },
     "project1": {
         "banner_title": "Femmy",
         "banner_subtitle": "A Special Mobile App for Women",
