--- a/src/utils/i18n/locals/uz/uz.json
+++ b/src/utils/i18n/locals/uz/uz.json
@@ -89,6 +89,37 @@
         "card6_title": "Rivojlanish yakuniy",
         "card6_text": "Loyiha to‘liq yakunlanadi, barcha funksiyalar sinovdan o‘tkaziladi va optimallashtiriladi. Biz mijozlarimizga tayyor mahsulotni yuqori sifat bilan taqdim etamiz!"
     },
+    "project_home_page": {
+        "subtitle_home": "Bizning loyihalar",
+        "title_home": "Bizning loyihalarimiz bilan tanishing",
+        "button_text":"Hamma loyihalar",
+        "card1_title":"Manasoft",
+        "card1_text": "IT kompaniya veb sayti",
+        "card2_title":"Femmi",
+        "card2_text": "Android va iOS",
+        "card3_title":"MedAgent",
+        "card3_text": "Tibbiyot vakillarining ishni boshqarish",
+        "card4_title":"Ross & Foundations",
+        "card4_text": "Qurilish kompaniya veb sayti",
+        "card5_title":"IMPERIAL GRANITE",
+        "card5_text": "Savdo jarayonlarini avtomatlashtirish"
+    },
+    "project_page":{
+        "subtitle":"+100 ortiq loyihalar",
+        "title": "Bizning loyihalarimiz",
+        "text": "Biznesingizni samarali rivojlantirish uchun ishonchli IT hamkor kerakmi? Manasoft sizga zamonaviy, tezkor va ishonchli yechimlar taqdim etadi!",
+        "button_text":"Hammasi",
+        "button_text1":"Mobil ilova",
+        "button_text2":"Veb sayt",
+        "button_text3":"CRM",
+        "button_text4":"UX/UI",
+        "card1_title": "Femmi",
+        "card1_text": "Mobil qurilmalar uchun ilova",
+        "card2_title": "IMPERIAL GRANITE",
+        "card2_text": "Mobil qurilmalar uchun ilova",
+        "card3_title": "MedAgent",
+        "card3_text": "Mobil qurilmalar uchun ilova"
+    },
     "project1": {
         "banner_title": "Femmy",
         "banner_subtitle": "Ayollar uchun maxsus mobil ilova",
