--- a/src/utils/i18n/locals/ru/ru.json
+++ b/src/utils/i18n/locals/ru/ru.json
@@ -189,6 +189,8 @@
         "phone_error": "Номер телефона должен начинаться с +998 и содержать 12 цифр.",
         "message_error": "Сообщение должно содержать минимум 10 символов."
     },
+    "more_info": "Подробнее",
+    "small_info": "Скрыть",
     "footer": {
         "link_title1": "Меню",
         "link_title2": "Услуги",
