--- a/src/utils/i18n/locals/uz/uz.json
+++ b/src/utils/i18n/locals/uz/uz.json
@@ -92,27 +92,27 @@
     "project_home_page": {
         "subtitle_home": "Bizning loyihalar",
         "title_home": "Bizning loyihalarimiz bilan tanishing",
-        "button_text":"Hamma loyihalar",
-        "card1_title":"Manasoft",
+        "button_text": "Hamma loyihalar",
+        "card1_title": "Manasoft",
         "card1_text": "IT kompaniya veb sayti",
-        "card2_title":"Femmi",
+        "card2_title": "Femmi",
         "card2_text": "Android va iOS",
-        "card3_title":"MedAgent",
+        "card3_title": "MedAgent",
         "card3_text": "Tibbiyot vakillarining ishni boshqarish",
-        "card4_title":"Ross & Foundations",
+        "card4_title": "Ross & Foundations",
         "card4_text": "Qurilish kompaniya veb sayti",
-        "card5_title":"IMPERIAL GRANITE",
+        "card5_title": "IMPERIAL GRANITE",
         "card5_text": "Savdo jarayonlarini avtomatlashtirish"
     },
-    "project_page":{
-        "subtitle":"+100 ortiq loyihalar",
+    "project_page": {
+        "subtitle": "+100 ortiq loyihalar",
         "title": "Bizning loyihalarimiz",
         "text": "Biznesingizni samarali rivojlantirish uchun ishonchli IT hamkor kerakmi? Manasoft sizga zamonaviy, tezkor va ishonchli yechimlar taqdim etadi!",
-        "button_text":"Hammasi",
-        "button_text1":"Mobil ilova",
-        "button_text2":"Veb sayt",
-        "button_text3":"CRM",
-        "button_text4":"UX/UI",
+        "button_text": "Hammasi",
+        "button_text1": "Mobil ilova",
+        "button_text2": "Veb sayt",
+        "button_text3": "CRM",
+        "button_text4": "UX/UI",
         "card1_title": "Femmi",
         "card1_text": "Mobil qurilmalar uchun ilova",
         "card2_title": "IMPERIAL GRANITE",
@@ -189,6 +189,8 @@
         "phone_error": "Telefon raqam +998 bilan boshlanishi va 12 ta raqam bo‘lishi kerak.",
         "message_error": "Xabar kamida 10 ta belgi bo‘lishi kerak."
     },
+    "more_info": "Ko'proq",
+    "small_info": "Kamroq",
     "footer": {
         "link_title1": "Menu",
         "link_title2": "Xizmatlar",
