--- a/src/utils/i18n/locals/ru/ru.json
+++ b/src/utils/i18n/locals/ru/ru.json
@@ -187,7 +187,10 @@
         "fullName_error2": "Должна быть хотя бы одна ЗАГЛАВНАЯ буква.",
         "fullName_error3": "Должна быть хотя бы одна строчная буква.",
         "phone_error": "Номер телефона должен начинаться с +998 и содержать 12 цифр.",
-        "message_error": "Сообщение должно содержать минимум 10 символов."
+        "message_error": "Сообщение должно содержать минимум 10 символов.",
+        "success": "Ваше сообщение успешно отправлено!",
+        "error_message": "Произошла ошибка при отправке сообщения, пожалуйста, попробуйте еще раз.",
+        "sending": "Отправка..."
     },
     "more_info": "Подробнее",
     "small_info": "Скрыть",
