other problem fixed

--- a/src/utils/i18n/locals/en/en.json
+++ b/src/utils/i18n/locals/en/en.json
@@ -95,7 +95,7 @@
         "button_text": "All Projects",
         "card1_title": "Manasoft",
         "card1_text": "IT Company Website",
-        "card2_title": "Femmi",
+        "card2_title": "Femmy",
         "card2_text": "Android and iOS",
         "card3_title": "MedAgent",
         "card3_text": "Medical Representatives Workflow Management",
@@ -113,7 +113,7 @@
         "button_text2": "Website",
         "button_text3": "CRM",
         "button_text4": "UX/UI",
-        "card1_title": "Femmi",
+        "card1_title": "Femmy",
         "card1_text": "Mobile Application",
         "card2_title": "IMPERIAL GRANITE",
         "card2_text": "Mobile Application",
