--- a/src/utils/i18n/locals/ru/ru.json
+++ b/src/utils/i18n/locals/ru/ru.json
@@ -95,7 +95,7 @@
         "button_text": "Все проекты",
         "card1_title": "Manasoft",
         "card1_text": "Веб-сайт IT-компании",
-        "card2_title": "Femmi",
+        "card2_title": "Femmy",
         "card2_text": "Android и iOS",
         "card3_title": "MedAgent",
         "card3_text": "Управление работой медицинских представителей",
@@ -113,7 +113,7 @@
         "button_text2": "Веб-сайт",
         "button_text3": "CRM",
         "button_text4": "UX/UI",
-        "card1_title": "Femmi",
+        "card1_title": "Femmy",
         "card1_text": "Приложение для мобильных устройств",
         "card2_title": "IMPERIAL GRANITE",
         "card2_text": "Приложение для мобильных устройств",
