--- a/src/utils/i18n/locals/uz/uz.json
+++ b/src/utils/i18n/locals/uz/uz.json
@@ -95,11 +95,11 @@
         "button_text": "Hamma loyihalar",
         "card1_title": "Manasoft",
         "card1_text": "IT kompaniya veb sayti",
-        "card2_title": "Femmi",
+        "card2_title": "Femmy",
         "card2_text": "Android va iOS",
         "card3_title": "MedAgent",
         "card3_text": "Tibbiyot vakillarining ishni boshqarish",
-        "card4_title": "Ross & Foundations",
+        "card4_title": "Ross Foundation",
         "card4_text": "Qurilish kompaniya veb sayti",
         "card5_title": "IMPERIAL GRANITE",
         "card5_text": "Savdo jarayonlarini avtomatlashtirish"
@@ -113,7 +113,7 @@
         "button_text2": "Veb sayt",
         "button_text3": "CRM",
         "button_text4": "UX/UI",
-        "card1_title": "Femmi",
+        "card1_title": "Femmy",
         "card1_text": "Mobil qurilmalar uchun ilova",
         "card2_title": "IMPERIAL GRANITE",
         "card2_text": "Mobil qurilmalar uchun ilova",
